--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,21 @@ services:
       dockerfile: Dockerfile
     container_name: ginplayground-server
     ports:
-      - "8080:8080"
+      - "${SERVER_PORT}:${SERVER_PORT}"
     environment:
-      DATABASE_USER: root
-      DATABASE_PASSWORD: root
-      DATABASE_HOST: db
-      DATABASE_PORT: 5432
-      DATABASE_SSL_MODE: disable
-      DATABASE_NAME: todo_app
-      SSLROOTCERT: /
-      SERVER_PORT: 8080
-      GO_MODE: debug
-      ALLOWED_ORIGINS: '*'
-      JWT_SECRET: 9e7e07a6d1c7a1e8b45a3ab5600c5dde307478d847b708d02698b7c0c2373367
-      TOKEN_DURATION_MINUTES: 5
-      TRUSTED_PROXY_IPS: '127.0.0.1'
+      DATABASE_USER: ${DATABASE_USER}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      DATABASE_HOST: ${DATABASE_HOST}
+      DATABASE_PORT: ${DATABASE_PORT}
+      DATABASE_SSL_MODE: ${DATABASE_SSL_MODE}
+      DATABASE_NAME: ${DATABASE_NAME}
+      SSLROOTCERT: ${SSLROOTCERT}
+      SERVER_PORT: ${SERVER_PORT}
+      GO_MODE: ${GO_MODE}
+      ALLOWED_ORIGINS: ${ALLOWED_ORIGINS}
+      JWT_SECRET: ${JWT_SECRET}
+      TOKEN_DURATION_MINUTES: ${TOKEN_DURATION_MINUTES}
+      TRUSTED_PROXY_IPS: ${TRUSTED_PROXY_IPS}
     depends_on:
       db:
         condition: service_healthy
@@ -27,16 +27,16 @@ services:
     image: postgres:17.2-alpine3.21
     container_name: postgres-todo-app
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: todo_app
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - db-data:/var/lib/postgresql/data
       - ./scripts/db:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U root -d todo_app" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${DATABASE_USER} -d ${DATABASE_NAME}" ]
       interval: 5s
       timeout: 5s
       retries: 5
